--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fontsource/lemon": "^5.0.20",
     "@fontsource/manjari": "^5.0.21",
+    "@iconify-json/mdi": "^1.1.66",
     "astro": "^4.7.1",
     "astro-icon": "^1.1.0"
   },
