Add Vue integration and EmailJS dependency. Create ContactForm island

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,18 @@
 {
   "extends": "astro/tsconfigs/base",
-    "compilerOptions": {
-      "baseUrl": ".",
-      "paths": {
-        "@components/*": ["src/components/*"],
-        "@assets/*": ["src/assets/*"],
-        "@content/*": ["src/content/*"]
-      }
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@components/*": [
+        "src/components/*"
+      ],
+      "@assets/*": [
+        "src/assets/*"
+      ],
+      "@content/*": [
+        "src/content/*"
+      ]
+    },
+    "jsx": "preserve"
   }
 }
