--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/vue": "^4.2.0",
+    "@emailjs/browser": "^4.3.3",
     "@fontsource/lemon": "^5.0.20",
     "@fontsource/manjari": "^5.0.21",
     "@iconify-json/mdi": "^1.1.66",
     "astro": "^4.7.1",
-    "astro-icon": "^1.1.0"
+    "astro-icon": "^1.1.0",
+    "vue": "^3.4.27"
   },
   "devDependencies": {
     "@iconify-json/bx": "^1.1.10",
